Fix chromium scrollbars

--- a/html/styles.css
+++ b/html/styles.css
@@ -117,3 +117,19 @@
                         width: calc(100% - 20px);
                     }
                 }
+
+body::-webkit-scrollbar {
+    /* width of the entire scrollbar */
+    width: 8px;
+}
+
+body::-webkit-scrollbar-track {
+  background: transparent;        /* color of the tracking area */
+
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #888;    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+    width: 6px !important;
+}
